--- a/style.css
+++ b/style.css
@@ -1,2 +1,24 @@
+h1{
+  color:red;
+background-color: black;
+}
 h1 {
+  font-family: 'Creepster', cursive;
+}
+h1 {
+  text-align: center;
+}
+body {
+   text-align: center;
+}
+h2{color:darkred;
+ background-color:black;
+border:2px dashed red;
+}
+
+img {text-align: center;
+}
+body {
+  color:white;
+  background-color:black;
 }
